Mon Mar 26 17:05:29 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* configure.in, m4/az_python.m4: OS/X changes

Thu Mar 22 00:22:47 CET 2007 Christian Anthon <anthon@kiku.dk>

	* import.c, openurl.c, sound.c, doc/Makefile.am: a few compile fixes
	after previous checkins

Wed Mar 21 00:23:10 CET 2007 Christian Anthon <anthon@kiku.dk>

	* <many>: Sound system cleanup. We now allow only an external command
	or for system that support it: either esound, or win32 sound.

Wed Mar 21 00:21:08 CET 2007 Christian Anthon <anthon@kiku.dk>

	* import.c: Allow import of nackgammon mat files. (thx,  Joerg Picard
	<joerg.picard@gmail.com>)

Tue Mar 20 19:28:06 CET 2007 Christian Anthon <anthon@kiku.dk>

	* <many>: Removed gtktexi. Added Albert Silver's 'All about GNU'.
	Updated the openurl function and allowed user configuration of the web
	browser.

Tue Mar 20 16:49:37 CET 2007 Christian Anthon <anthon@kiku.dk>

	* eval.[ch]: fix bug caused by signed/unsigned changes

Fri Mar 16 02:30:26 CET 2007 Christian Anthon <anthon@kiku.dk>

	* <many>: updated documentation. It now contains the information from
	the dokuwiki as well as the old info files. The documentation is now
	written in docbook format, and texinfo and info files are now
	generated from the docbook source. The manpage has been updated as
	well.

Fri Mar 16 00:04:44 CET 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkgame.c, gtkwindows.c, play.c: replace gtk_idle with
	g_idle.

Fri Mar 16 00:04:29 CET 2007 Christian Anthon <anthon@kiku.dk>

	* <many>: silence a bunch of intel c compiler warnings (recomitting
	after savannah crash)

Fri 15 Mar 21:47:53 2007 GMT Jim Segrave <jes@j-e-s.net>

	* rollout.c: was using the 'this is a cube rollout' flag to
          decide whether to calculate JSDs from cubeful or cubeless equities

Sun 25 Feb 12:11:40 2007 GMT Jim Segrave <jes@j-e-s.net>

	* rollout.c : if settings were for cubeful rollouts, then
	  extending rollouts used cubeful equity. Threading aggravates