@@ -1,3 +1,7 @@
+Thu Mar 29 09:51:40 CEST 2007 Christian Anthon <anthon@kiku.dk>
+
+	* configure.in, m4/az_python.m4: Fix --without-python
+
 Mon Mar 26 17:05:29 CEST 2007 Christian Anthon <anthon@kiku.dk>
 
 	* configure.in, m4/az_python.m4: OS/X changes
